--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "classnames": "^2.5.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
