--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-simplemde-editor": "^4.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
