--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-simplemde-editor": "^4.1.2",
     "zod": "^4.1.11"
   },
