--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.42",
+    "@ai-sdk/react": "^2.0.60",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@radix-ui/themes": "^3.2.1",
+    "ai": "^5.0.59",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "lucide-react": "^0.544.0",
